Fix figure content overlap.

--- a/assets/css/http.css
+++ b/assets/css/http.css
@@ -159,7 +159,7 @@ div.delete {
 }
 @media screen and (max-width: 900px) {
   figure.image{
-    display: block;
+    display: inline-block;
     width: 300px;
     height: 300px;
     margin-right: 20%;
@@ -167,7 +167,7 @@ div.delete {
 
   }
   div.workingContent {
-    display: block;
+    display: inline-block;
     padding: 10px;
 
   }
@@ -201,7 +201,7 @@ div.delete {
 
 @media screen and (max-width: 600px) {
   figure.image{
-    display: block;
+    display: inline-block;
     clear: both;
     float: left;
     width: 200px;
@@ -215,7 +215,7 @@ div.delete {
   }
 
   div.workingContent {
-    display: block;
+    display: inline-block;
     padding: 10px;
 
   }
